--- a/index.html
+++ b/index.html
@@ -4,4 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
+
 <body>
+    <script src="app.js"></script>
+</body>
