--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="line-chart-container"></div>
         </div>
         <div class="data-source-info data-source-info-text">
-          <p>Data Source Centers for Disease Control and Prevention - National Center for Health Statistics - Table 005</p>
+          <p>Data Source Centers for Disease Control and Prevention - National Center for Health Statistics - <a href="https://www.cdc.gov/nchs/hus/contents2018.htm#Table_005" target="_blank" >Table 005</a></p>
         </div>
        
        
